[package]
name = "code_indexerv2"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
petgraph = "0.6"
single-clustering = "0.6.1"

[dev-dependencies]
tempfile = "3.12"
